--- a/KHANSIRCLASS4index.html
+++ b/KHANSIRCLASS4index.html
@@ -31838,11 +31838,11 @@ NEET 2025 Physics By Mohit Agarwal Sir (English Medium)
         <div data-role="footer">
             <p class="video">
                 <span class="video_name">
-                    Made with ❤️ by
+                    Made with  by
                 </span>
                 <br />
-                <a class="studyiq" href="https://t.me/ikunal_x" target="__blank">
-                    @ikunal_x
+                <a class="studyiq" href="https://t.me/currentaffairsupdatz" target="__blank">
+                    @currentaffairsupdatz
                 </a>
             </p>
         </div>
